Make segSet.addEventListener fully functional
also, remove black border on columns and rows.
the code is disgusting but it took me days to get it
working and I wont rewrite it even at gunpoint.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Sketchpad</h1>
+    <button class="segmentChange">Set Grid Segment Count</button>
     <div class="container"></div>
     
 </body>
